--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href=".">
     <title>Board Game AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,6 +35,6 @@
             <div id="reset-btn" class="btn">Reset</div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
